<resources>
    <string name="app_name">NewsApi</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="news">NewsAPI</string>
    <string name="perfililustrativo">Perfil Ilustrativo</string>
    <string name="iniciar_sesion">Iniciar  sesión</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="no_cuenta">¿No tienes una cuenta?  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar_noticia">Guardar noticia</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="favorite_news">Favorite News</string>
    <string name="n_mero_de_noticias">Número de noticias</string>
    <string name="_5">5</string>
    <string name="buscar">Buscar</string>
    <string name="filtrar">Filtrar</string>
</resources>