<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="20dp"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="20"
        android:text="@string/news"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:fontFamily="@font/salmond_semibold"/>


    <ImageView
        android:id="@+id/perfil"
        android:layout_width="213dp"
        android:layout_height="254dp"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FBFBFB"
        android:contentDescription="@string/perfililustrativo"
        android:src="@drawable/perfil"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/perfil"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuario"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boton"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/no_cuenta" />

        <TextView
            android:id="@+id/crearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:onClick="createAccount"
            android:text="@string/crearCuenta"
            android:textColor="@color/blue"
            android:textSize="18sp" />

    </LinearLayout>



</RelativeLayout>