<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="20dp"
        android:shadowColor="#070707"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="20"
        android:text="@string/news"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/crearView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Crear cuenta"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/crearView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:textColorHint="#757575" />


    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuario"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/confirmarContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Confirmar contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:textColorHint="#757575" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmarContrasena"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:buttonTint="@color/white"
        android:text="Acepto los términos y condiciones"
        android:textColor="@color/white"
        app:buttonIconTint="@color/black" />

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/blue"
        android:text="Crear cuenta"
        android:textColor="@color/white" />


</RelativeLayout>